fix the handle functions